# llvm-triple

./: CMakeLists.txt  README.md
Source/: CMakeLists.txt  LLVMTargetTriple.cpp  LLVMTargetTriple.hpp  main.cpp
